Closed
Bug 1324924
Opened 8 years ago
Closed 8 years ago
Implement ImageBitmap for TexImage
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: jgilbert, Assigned: jgilbert)
References
Details
(Keywords: dev-doc-complete, Whiteboard: gfx-noted)
Attachments
(4 files, 1 obsolete file)
|
58 bytes,
text/x-review-board-request
|
mtseng
:
review+
|
Details |
|
58 bytes,
text/x-review-board-request
|
bzbarsky
:
review+
|
Details |
|
58 bytes,
text/x-review-board-request
|
daoshengmu
:
review+
|
Details |
|
11 bytes,
text/plain
|
jgilbert
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
No description provided.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•8 years ago
|
Attachment #8820439 -
Attachment is obsolete: true
Attachment #8820439 -
Flags: review?(dmu)
Comment 8•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8820438 [details]
Bug 1324924 - Add ImageBitmap entrypoints. -
https://reviewboard.mozilla.org/r/99924/#review100416
r=me, but this should presumably be folded with the next changeset, so we don't have non-compiling changesets in the tree.
Attachment #8820438 -
Flags: review?(bzbarsky) → review+
Comment 9•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8820437 [details]
Bug 1324924 - ImageBitmap::ToCloneData should be const and return a UniquePtr. -
https://reviewboard.mozilla.org/r/99922/#review100450
Attachment #8820437 -
Flags: review?(mtseng) → review+
Comment 10•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8820440 [details]
Bug 1324924 - Add implementation for ImageBitmaps. -
https://reviewboard.mozilla.org/r/99928/#review100466
Attachment #8820440 -
Flags: review?(dmu) → review+
Comment 11•8 years ago
|
||
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6b721c404cec
Support ImageBitmap for Tex*Image*. (flattened) - r=bz,daoshengmu,mtseng
Updated•8 years ago
|
Keywords: dev-doc-needed
| Assignee | ||
Comment 12•8 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8820600 -
Flags: review+
Attachment #8820600 -
Flags: approval-mozilla-beta?
Attachment #8820600 -
Flags: approval-mozilla-aurora?
Comment 13•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Updated•8 years ago
|
status-firefox51:
--- → affected
status-firefox52:
--- → affected
Comment 14•8 years ago
|
||
Comment on attachment 8820600 [details]
placeholder for all patches
Fix WebGL2 related issue. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8820600 -
Flags: approval-mozilla-beta?
Attachment #8820600 -
Flags: approval-mozilla-beta+
Attachment #8820600 -
Flags: approval-mozilla-aurora?
Attachment #8820600 -
Flags: approval-mozilla-aurora+
Comment 15•8 years ago
|
||
Comment 16•8 years ago
|
||
Sorry had to back this out for WebGLRenderingContext.webidl dependency, and bustage caused by bug 1324543. This will be landed with bug 1317625 and bug 1324543.
Updated•8 years ago
|
| Assignee | ||
Comment 18•8 years ago
|
||
| Assignee | ||
Comment 19•8 years ago
|
||
Comment 20•8 years ago
|
||
ImageBitmaps are already documented:
https://developer.mozilla.org/en-US/docs/Web/API/ImageBitmap
Added WebGL method reference docs:
https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext/texImage2D
https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext/texSubImage2D
https://developer.mozilla.org/en-US/docs/Web/API/WebGL2RenderingContext/texImage3D
https://developer.mozilla.org/en-US/docs/Web/API/WebGL2RenderingContext/texSubImage3D
Developer release notes entry:
https://developer.mozilla.org/en-US/Firefox/Releases/51#WebGL
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•