Bug 1324924 - Support ImageBitmap for Tex*Image*. (flattened) - r=bz,daoshengmu,mtseng a=gchang

MozReview-Commit-ID: JzcbzeFHyHn