dom/canvas/WebGLContext.h
@@ -205,6 +205,7 @@ struct TexImageSource
 
     const WebGLsizeiptr* mPboOffset;
 
+    const dom::ImageBitmap* mImageBitmap;
     const dom::ImageData* mImageData;
 
     const dom::Element* mDomElem;
@@ -246,6 +247,10 @@ struct TexImageSourceAdapter final : public TexImageSource
 
     TexImageSourceAdapter(const WebGLsizeiptr* pboOffset, ErrorResult* ignored) {
         mPboOffset = pboOffset;
+    }
+
+    TexImageSourceAdapter(const dom::ImageBitmap* imageBitmap, ErrorResult*) {
+        mImageBitmap = imageBitmap;
     }
 
     TexImageSourceAdapter(const dom::ImageData* imageData, ErrorResult*) {
